(process) ProcessEnvironment_md.c not compiling on 8uX

XMLWordPrintable

    • b20
    • Verified

        jdk8u-dev isn't building on windows since the JDK-8036603 fix was pushed. A bad macro call is made.

        c:/jprt/T/P1/162027.scoffey/s/jdk/src/windows/native/java/lang/ProcessEnvironment_md.c(44) : warning C4003: not enough actual parameters for macro 'CHECK_NULL_RETURN'
        c:/jprt/T/P1/162027.scoffey/s/jdk/src/windows/native/java/lang/ProcessEnvironment_md.c(44) : error C2059: syntax error : ')'
        c:/jprt/T/P1/162027.scoffey/s/jdk/src/windows/native/java/lang/ProcessEnvironment_md.c(70) : error C2143: syntax error : missing '{' before '__cdecl'
        c:/jprt/T/P1/162027.scoffey/s/jdk/src/windows/native/java/lang/ProcessEnvironment_md.c(77) : warning C4047: 'return' : 'int' differs in levels of indirection from 'jstring'
        c:/jprt/T/P1/162027.scoffey/s/jdk/src/windows/native/java/lang/ProcessEnvironment_md.c(87) : warning C4047: 'return' : 'int' differs in levels of indirection from 'jstring'

        Fixing should be straightforward. Currently testing.

              Assignee:
              Sean Coffey
              Reporter:
              Sean Coffey
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: