8047777: (process) ProcessEnvironment_md.c not compiling on 8uX

Reviewed-by: chegar